# RSSC

./: .gcc-flags.json  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac  notes.md
R/: RSSC.R  RcppExports.R  factory.R  pvwatts.R  scratch.R  zzz.R
inst/: classes.xml  classes.yml  classtemplate.xsd
man/: pvwattsv5.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  hello.cpp  pvwatts.cpp  pvwattstest.cpp  ssc_info.cpp  testing_dataio.cpp
tests/: testthat.R
tests/testthat/: test_pvwattsv5.R  test_ssc_dataio.R
